Updated UI, Change Password mostly implemented, modifications for prototype

--- a/views/remove.handlebars
+++ b/views/remove.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>DomoMaker</title>
+  <title>Recipe Resort</title>
   <script crossorigin src="https://unpkg.com/react@15/dist/react.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
   <script crossorigin src="https://unpkg.com/prop-types/prop-types.min.js"></script>
@@ -14,8 +14,9 @@
 </head>
 <body>
   <nav><a href="/login"><img id="logo" src="/assets/img/face.png" alt="face logo"/></a>
+    <a class= "navtitle" href="/login">Recipe Resort</a>
     <div class="navlink"><a href="/logout">Log out</a></div>
-    <div class="navlink"><a href="/maker">Maker</a></div>
+    <div class="navlink"><a href="/maker">Add Recipe</a></div>
   </nav>
   <section id="domos">
   </section>
