--- a/hosted/style.css
+++ b/hosted/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 html, body {
     height: 100%;
     width: 100%;
@@ -17,20 +19,30 @@ html, body {
 nav {
     width: 100%;
     height: 50px;
-    background-color: #55acee;
+    background-color: #2f2626;
 }
 
 nav:nth-child(1) {
     padding-left: 25px;
 }
 
-.navlink {
+.navtitle {
     padding: 5px;
     padding-top: 12px;
     padding-left: 20px;
     color: white;
     font-size: 1.3em;
     float: left;
+    font-family: "Montserrat";
+    text-decoration: none;
+}
+.navlink {
+    padding: 5px;
+    padding-top: 12px;
+    padding-left: 20px;
+    color: white;
+    font-size: 1.3em;
+    float: right;
 }
 
 .navlink a, .navlink a:link, .navlink a:visited, .navlink a:hover, .navlink a:active {
@@ -38,22 +50,23 @@ nav:nth-child(1) {
     text-decoration: none;
     padding: 5px;
     border-radius: 4px;
-    background-color: #55acee;
+    font-family: "Montserrat";
+    background-color: ;
     transition: background-color 0.4s ease;
 }
 
 .navlink a:hover {
     transition: background-color 0.8s ease;
-    background-color: #66bdff;
+    background-color: #5f4c4c;
 }
 
 .domoForm {
-    border: 2px solid #338acc;
+    border: 2px solid #2f2626;
     height: 35px;
     width: 700px;
     margin-top:0px;
     padding-top:10px;
-    background-color: #55acee;
+    background-color: ;
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
 }
@@ -63,7 +76,7 @@ nav:nth-child(1) {
     width: 75px;
     margin-left: 10px;
     font-size: 1.2em;
-    float: left;
+    float: right;
     color: white;
 }
 
@@ -75,7 +88,7 @@ nav:nth-child(1) {
     transition: background-color 0.4s ease;
     display: inline;
     width: 90px;
-    background-color: #55acee;
+    background-color: #2f2626;
     border-radius: 2px;
     color: white;
     text-decoration: none;
@@ -87,7 +100,7 @@ nav:nth-child(1) {
 
 .makeDomoSubmit:hover {
     transition: background-color 0.4s ease;
-    background-color: #338acc;
+    background-color: #5f4c4c;
 }
 
 .mainForm {
@@ -117,10 +130,10 @@ nav:nth-child(1) {
     margin: 0 auto;
     margin-top: 14px;
     font-size: 1.2em;
-    width: 100px;
-    background-color: #55acee;
+    width: 200px;
+    background-color: #2f2626;
     border-radius: 2px;
-    border-color: #66acee;
+    border-color: #5f4c4c;
     padding: 3px 0px;
     color: white;
     text-decoration: none;
@@ -132,7 +145,7 @@ nav:nth-child(1) {
 
 .formSubmit:hover {
     transition: background-color 0.4s ease;
-    background-color: #338acc;
+    background-color: #5f4c4c;
 }
 
 #user, #pass, #pass2 {
@@ -144,7 +157,7 @@ nav:nth-child(1) {
 
 #user:focus, #pass:focus, #pass2:focus {
     outline: none;
-    box-shadow: 0px 0px 1px 1px #55acee;
+    box-shadow: 0px 0px 1px 1px #2f2626;
 }
 
 #domoMessage {
@@ -161,8 +174,9 @@ nav:nth-child(1) {
 #domoMessage h3 {
     width: 200px;
     position: absolute;
-    top: 0px;
     left: 20px;
+    top: -8px;
+    text-align: right;
 }
 
 #speech {
@@ -180,19 +194,15 @@ nav:nth-child(1) {
 
 #domo {
     z-index: 225;
-    margin-top: -20px;
-    margin-left: 135px;
+    margin-left: -30px;
     height: 450px;
-    width: 300px;
-    -ms-transform: rotate(330deg);
-    -webkit-transform: rotate(330deg); 
-    transform: rotate(330deg);
+    margin-top: -150px;
 }
 
 #domos {
     width: 40%;
     min-width: 400px;
-    border: 2px solid #55acee;
+    border: 2px solid #2f2626;
     border-radius: 4px;
     margin: 0 auto;
     margin-top: 100px;
@@ -203,9 +213,9 @@ nav:nth-child(1) {
     margin: 0 auto;
     margin-top: 2px;
     margin-bottom: 2px;
-    border: 2px solid #55acee;
+    border: 2px solid #2f2626;
     border-radius: 4px;
-    background-color: #55acee;
+    background-color: #2f2626;
     padding: 10px;
     min-height:60px;
     overflow: hidden;
@@ -215,7 +225,7 @@ nav:nth-child(1) {
     transition: border-color 0.2s ease-out;
     border-color: rgba(255,255,255, 0.8);
     transition: background-color 2.6s ease-out;
-    background-color: #66bfff;
+    background-color: #5f4c4c;
 }
 
 img.domoFace {
