--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>DomoMaker</title>
+  <title>Recipe Resort</title>
   <script crossorigin src="https://unpkg.com/react@15/dist/react.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
   <script crossorigin src="https://unpkg.com/prop-types/prop-types.min.js"></script>
@@ -15,8 +15,9 @@
 
 <body>
   <nav><a href="/login"><img id="logo" src="/assets/img/face.png" alt="face logo" /></a>
+    <a class= "navtitle" href="/login">Recipe Resort</a>
     <div class="navlink"><a href="/logout">Log out</a></div>
-    <div class="navlink"><a href="/remove">Delete Domos</a></div>
+    <div class="navlink"><a href="/remove">Delete Recipe</a></div>
   </nav>
   <section id="makeDomo">
   </section>
