--- a/hosted/style.css
+++ b/hosted/style.css
@@ -215,7 +215,7 @@ nav:nth-child(1) {
     margin-bottom: 2px;
     border: 2px solid #2f2626;
     border-radius: 4px;
-    background-color: #2f2626;
+    background-color: #ffcc99;
     padding: 10px;
     min-height:60px;
     overflow: hidden;
