Updated nav, styling, page implementation

--- a/hosted/style.css
+++ b/hosted/style.css
@@ -12,6 +12,10 @@ html, body {
     font-size: 62.5%;
     font-size: 10px;
     overflow-x: hidden;
+    background-image: url('img/backgroundEdited.gif');
+    background-size: cover;
+    background-repeat: repeat-y no-repeat;
+    background-color: skyblue;
 }
 
 /* ===== NAVIGATION ======*/
@@ -73,16 +77,13 @@ nav:nth-child(1) {
     font-family: "Montserrat";
     text-decoration: none;
 }
-.navlink {
+.nav-link {
     padding: 5px;
-    padding-top: 12px;
-    padding-left: 20px;
-    color: white;
     font-size: 1.3em;
-    float: right;
 }
 
-.navlink a, .navlink a:link, .navlink a:visited, .navlink a:hover, .navlink a:active {
+
+.nav-link a, .nav-link a:link, .nav-link a:visited, .nav-link a:hover, .nav-link a:active {
     color: white;
     text-decoration: none;
     padding: 5px;
@@ -94,7 +95,7 @@ nav:nth-child(1) {
 
 .navlink a:hover {
     transition: background-color 0.8s ease;
-    background-color: #5f4c4c;
+    background-color: white;
 }
 
 .recipeForm {
@@ -190,6 +191,16 @@ nav:nth-child(1) {
     font-size: 1.1em;
     width: 180px;
     border-radius: 6px;
+    font-family: inherit;
+    width: 100%;
+    margin-top: 4%;
+    border: .5px solid powderblue;
+    width: 68%;
+    outline: 0;
+    font-size: 1.3rem;
+    padding: 7px 0;
+    background: aliceblue;
+    transition: border-color 0.2s;
 }
 
 #user:focus, #pass:focus, #pass2:focus {
@@ -264,6 +275,13 @@ nav:nth-child(1) {
     transition: background-color 2.6s ease-out;
     background-color: #5f4c4c;
 }
+
+  .textBox {
+      width: 60%;
+      margin: 0 20%;
+      padding: 1em;
+      border: 1px solid lightgrey;
+  }
 
 img.cartIcon {
     margin-left: 25px;
