Working UI with slight adjustments

--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -1,7 +1,6 @@
 <html lang="en">
-
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8"/>
   <title>Recipe Resort</title>
   <script crossorigin src="https://unpkg.com/react@15/dist/react.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
@@ -10,7 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script
+<script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
@@ -20,41 +19,43 @@
     <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
     </head>
     <body>
-            <!-- 
-    Bootstrap code taken and modified from: https://startbootstrap.com/snippets/full-slider/ -->
+        <!-- 
+        Bootstrap code taken and modified from: https://startbootstrap.com/snippets/full-slider/ -->
     
-    <nav class="navbar navbar-expand-lg navbar-light  fixed-top">
-        <div class="container">
-            <a href="/login"><img id="logo" src="/assets/img/logo.png" alt="Recipe Resort logo"/></a>
-            <a class="navbar-brand" href="/login">Recipe Resort</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+<nav class="navbar navbar-expand-lg navbar-light  fixed-top">
+  <div class="container">
+    <a href="/login"><img id="logo" src="/assets/img/logo.png" alt="Recipe Resort logo"/></a>
+    <a class="navbar-brand" href="/login">Recipe Resort</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/logout">Logout</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/remove">Delete Recipe</a>
+          <a class="nav-link" href="/addRecipe">Add Recipe</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/changePassword">Change Password</a>
+          <a class="nav-link" href="/remove">Delete Recipe</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-  <section id="makeRecipe">
-  </section>
-  <section id="recipes">
-  </section>
-  <div id="recipeMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box" />
-    <h3><span id="errorMessage"></span></h3><img id="recipe" src="assets/img/errorIcon.png" alt="recipe" />
-  </div>
-  <script src="/assets/bundle.js"></script>
-</body>
 
-</html>
+    <!-- Page Content -->
+  <section id ="accountPage">
+    <section id="passwordContainer">
+      <section id= "updateForm">
+      </section>
+    </section>
+    </section>
+  <div id="recipeMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
+    <h3><span id="errorMessage"></span></h3><img id="recipe" src="assets/img/errorIcon.png" alt="recipe"/>
+  </div>
+  <script src="/assets/settingsBundle.js"></script>
+</body>
