--- a/hosted/style.css
+++ b/hosted/style.css
@@ -102,7 +102,8 @@ nav:nth-child(1) {
     border: 2px solid #2f2626;
     height: 35px;
     width: 700px;
-    margin-top:0px;
+    margin-top:90px;
+    
     padding-top:10px;
     background-color: ;
     border-bottom-right-radius: 4px;
@@ -223,7 +224,7 @@ nav:nth-child(1) {
     width: 200px;
     position: absolute;
     left: 20px;
-    top: -8px;
+    top: 13px;
     text-align: right;
 }
 
@@ -234,7 +235,7 @@ nav:nth-child(1) {
 }
 
 #errorMessage {
-    font-size: 1.2em;
+    font-size: 1.0em;
     font-weight: bold;
     color: red;
     font-style: italic;
@@ -248,12 +249,15 @@ nav:nth-child(1) {
 }
 
 #recipes {
-    width: 40%;
+width: 40%;
     min-width: 400px;
     border: 2px solid #2f2626;
+    background-color: #e6c4b3;
     border-radius: 4px;
-    margin: 0 auto;
-    margin-top: 100px;
+    margin: 20px auto;
+    margin-top: 116px;
+    padding: 2.5em;
+    opacity: .9;
 }
 
 .recipe {
@@ -324,4 +328,40 @@ h3.recipeAge {
 
 .recipe:last-child {
     margin-bottom:10px;
+}
+
+/* Password Change Page */
+.changePassword {
+  transition: background-color 0.4s ease;
+  color: black;
+  border: 2px solid black;
+  border-radius: 20px;
+  font-size: 20px;
+  padding: 10px;
+  margin-left: 25%;
+  width: 50%;
+}
+
+.changePassword:link,
+.changePassword:visited,
+.changePassword:hover,
+.changePassword:active {
+  color: white;
+}
+
+.changePassword:hover {
+  transition: background-color 0.4s ease;
+  background-color: dimgrey;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+#changeForm {
+  padding: 20px;
+  margin: 20px;
+  display: block;
+}
+
+#passwordContainer {
+  padding: 20px;
+  margin: 20px;
 }
