--- a/views/remove.handlebars
+++ b/views/remove.handlebars
@@ -1,4 +1,3 @@
-
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
@@ -33,9 +32,6 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/login">Login
-                <span class="sr-only">(current)</span>
-              </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/logout">Logout</a>
@@ -44,7 +40,7 @@
           <a class="nav-link" href="/addRecipe">Add Recipe</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/settings">Settings</a>
+          <a class="nav-link" href="/changePassword">Change Password</a>
         </li>
       </ul>
     </div>
