--- a/views/remove.handlebars
+++ b/views/remove.handlebars
@@ -40,7 +40,7 @@
           <a class="nav-link" href="/addRecipe">Add Recipe</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/changePassword">Change Password</a>
+          <a class="nav-link" href="/changePassword">Settings</a>
         </li>
       </ul>
     </div>
