--- a/hosted/style.css
+++ b/hosted/style.css
@@ -121,6 +121,29 @@ nav:nth-child(1) {
 
 .recipeForm input[type=text] {
     float:left;
+    text-align: center;
+    font-size: 1.1em;
+    width: 180px;
+    border-radius: 6px;
+    font-family: inherit;
+    width: 100%;
+    margin-top: 4%;
+    border: .5px solid powderblue;
+    width: 68%;
+    outline: 0;
+    font-size: 1.3rem;
+    padding: 7px 0;
+    background: aliceblue;
+    transition: border-color 0.2s;
+}
+
+.recipeForm select {
+    margin: 0 .25rem;
+    min-width: 125px;
+    border: 1px solid #eee;
+    border-left: 3px solid;
+    border-radius: 5px;
+    transition: border-color .5s ease-out;    
 }
 
 .makeRecipeSubmit {
