--- a/hosted/style.css
+++ b/hosted/style.css
@@ -138,12 +138,21 @@ nav:nth-child(1) {
 }
 
 .recipeForm select {
-    margin: 0 .25rem;
-    min-width: 125px;
-    border: 1px solid #eee;
-    border-left: 3px solid;
-    border-radius: 5px;
-    transition: border-color .5s ease-out;    
+    float:left;
+    text-align: center;
+    font-size: 1.1em;
+    width: 180px;
+    border-radius: 6px;
+    font-family: inherit;
+    width: 100%;
+    margin-top: 4%;
+    border: .5px solid powderblue;
+    width: 68%;
+    outline: 0;
+    font-size: 1.3rem;
+    padding: 7px 0;
+    background: aliceblue;
+    transition: border-color 0.2s; 
 }
 
 .makeRecipeSubmit {
@@ -272,15 +281,17 @@ nav:nth-child(1) {
 }
 
 #recipes {
-width: 40%;
+    width: 40%;
     min-width: 400px;
     border: 2px solid #2f2626;
     background-color: #e6c4b3;
     border-radius: 4px;
+    float:right;
     margin: 20px auto;
     margin-top: 116px;
     padding: 2.5em;
     opacity: .9;
+    
 }
 
 .recipe {
