--- a/hosted/style.css
+++ b/hosted/style.css
@@ -99,24 +99,22 @@ nav:nth-child(1) {
 }
 
 .recipeForm {
+    opacity: .9;
     border: 2px solid #2f2626;
-    height: 35px;
-    width: 700px;
-    margin-top:90px;
-    
-    padding-top:10px;
-    background-color: ;
+    height: 400px;
+    width: 630px;
+    margin-top: 90px;
+    padding-top: 10px;
+    background-color: #ffcc9b;
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
 }
 
 .recipeForm label {
-    display: inline-block;
-    width: 75px;
-    margin-left: 10px;
-    font-size: 1.2em;
-    float: right;
-    color: white;
+    margin-left: -67%;
+    font-size: 1.7em;
+    position: relative;
+    padding: 1em;
 }
 
 .recipeForm input[type=text] {
@@ -157,10 +155,16 @@ nav:nth-child(1) {
 
 .makeRecipeSubmit {
     transition: background-color 0.4s ease;
-    display: inline;
-    width: 90px;
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 14px;
+    font-size: 1.2em;
+    width: 200px;
     background-color: #2f2626;
     border-radius: 2px;
+    border-color: #5f4c4c;
+    padding: 3px 0px;
     color: white;
     text-decoration: none;
 }
@@ -354,6 +358,31 @@ h3.recipeAge {
     font-weight: bold;
     padding-right: 40px;
     font-size: 1.5em;
+}
+
+p.foodCategory {
+    float:right;
+    text-align: left;
+    width: 100px;
+    font-weight: bold;
+    padding-right: 40px;
+    font-size: .9em;
+}
+p.tasteCategory {
+    float:right;
+    text-align: left;
+    width: 100px;
+    font-weight: bold;
+    padding-right: 40px;
+    font-size: .9em;
+}
+p.priceCategory {
+    float:right;
+    text-align: left;
+    width: 100px;
+    font-weight: bold;
+    padding-right: 40px;
+    font-size: .9em;
 }
 
 .recipe:first-child {
