--- a/hosted/style.css
+++ b/hosted/style.css
@@ -101,8 +101,7 @@ nav:nth-child(1) {
 .recipeForm {
     opacity: .9;
     border: 2px solid #2f2626;
-    height: 400px;
-    width: 630px;
+    width: 600px;
     margin-top: 90px;
     padding-top: 10px;
     background-color: #ffcc9b;
@@ -119,12 +118,13 @@ nav:nth-child(1) {
 
 .recipeForm input[type=text] {
     float:left;
-    text-align: center;
+    text-align: left;
     font-size: 1.1em;
     width: 180px;
     border-radius: 6px;
     font-family: inherit;
     width: 100%;
+    margin: 1em;
     margin-top: 4%;
     border: .5px solid powderblue;
     width: 68%;
@@ -137,9 +137,10 @@ nav:nth-child(1) {
 
 .recipeForm select {
     float:left;
-    text-align: center;
+    text-align: left;
     font-size: 1.1em;
     width: 180px;
+    margin: 1em;
     border-radius: 6px;
     font-family: inherit;
     width: 100%;
@@ -153,12 +154,17 @@ nav:nth-child(1) {
     transition: border-color 0.2s; 
 }
 
+.select-option {
+    text-align: center;
+}
+
 .makeRecipeSubmit {
     transition: background-color 0.4s ease;
-    display: block;
     text-align: center;
     margin: 0 auto;
-    margin-top: 14px;
+    display: block;
+    margin: 1em;
+    margin-top: 255px;
     font-size: 1.2em;
     width: 200px;
     background-color: #2f2626;
@@ -264,6 +270,58 @@ nav:nth-child(1) {
     text-align: right;
 }
 
+.makeRecipeh3{
+    z-index: 1;
+    margin-top: 75px;
+    padding: 0.5em;
+    position: absolute;
+    margin-left: .5em;
+    color: black;
+    background-color: sandybrown;
+    border: 2px solid black;
+}
+
+.searchRecipeh3{
+    z-index: 1;
+    padding: 0.5em;
+    width: 150px;
+    position: relative;
+    margin-left: .5em;
+    color: black;
+    background-color: sandybrown;
+    border: 2px solid;
+}
+
+.searchForm {
+    opacity: .9;
+    border: 2px solid #2f2626;
+    width: 600px;
+    margin-top: -20px;
+    padding-top: 10px;
+    background-color: #ffcc9b;
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.searchForm input {
+    float:left;
+    text-align: left;
+    font-size: 1.1em;
+    width: 180px;
+    border-radius: 6px;
+    font-family: inherit;
+    width: 100%;
+    margin: 1em;
+    margin-top: 4%;
+    border: .5px solid powderblue;
+    width: 68%;
+    outline: 0;
+    font-size: 1.3rem;
+    padding: 7px 0;
+    background: aliceblue;
+    transition: border-color 0.2s;
+}
+
 #speech {
     height: 120px;
     width: 250px;
@@ -275,6 +333,13 @@ nav:nth-child(1) {
     font-weight: bold;
     color: red;
     font-style: italic;
+}
+
+.errorPage {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #recipe {
@@ -393,6 +458,7 @@ p.priceCategory {
     margin-bottom:10px;
 }
 
+
 /* About Page */
 #titleAbout {
     text-align: center;
@@ -408,6 +474,18 @@ p.priceCategory {
 }
 
 /* Password Change Page */
+.accountPage {
+    text-align: center;
+    margin-top: 100px;
+}
+#titleChangePass {
+    text-align: center;
+    background-color: #e6c4b3;
+    padding: .3em;
+    width: 50%;
+    margin-left: 13em;
+    border: 1px solid black;
+}
 .changePassword {
   transition: background-color 0.4s ease;
   color: black;
@@ -430,6 +508,28 @@ p.priceCategory {
   transition: background-color 0.4s ease;
   background-color: dimgrey;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+#oldPass, #newPass, #newPass2 {
+    text-align: center;
+    font-size: 1.1em;
+    width: 180px;
+    border-radius: 6px;
+    font-family: inherit;
+    width: 100%;
+    margin: 1em;
+    border: .5px solid powderblue;
+    width: 68%;
+    outline: 0;
+    font-size: 1.3rem;
+    padding: 7px 0;
+    background: aliceblue;
+    transition: border-color 0.2s;
+}
+
+#user:focus, #pass:focus, #pass2:focus {
+    outline: none;
+    box-shadow: 0px 0px 1px 1px #2f2626;
 }
 
 #changeForm {
