--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -8,19 +8,21 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script
+    <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="/assets/img/favicon.png"/>
-    <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
-    </head>
-    <body>
-        <!-- 
-        Bootstrap code taken and modified from: https://startbootstrap.com/snippets/full-slider/ -->
+    
+  <link rel="shortcut icon" href="/assets/img/favicon.png"/>
+  <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
+</head>
+<body> 
+    <!-- 
+    Bootstrap code taken and modified from: https://startbootstrap.com/snippets/full-slider/ -->
     
 <nav class="navbar navbar-expand-lg navbar-light  fixed-top">
   <div class="container">
@@ -32,26 +34,27 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
+          <a class="nav-link" id="loginButton"  href="/login">Login
+                <span class="sr-only">(current)</span>
+              </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/logout">Logout</a>
+          <a class="nav-link" id="signUpButton" href="/signup">Signup</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/addRecipe">Add Recipe</a>
+          <a class="nav-link" id="aboutButton" href="/about">About</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/account">Change Password</a>
-        </li>
+
       </ul>
     </div>
   </div>
 </nav>
 
-  <section id="recipes">
-  </section>
-  <div id="recipeMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
-    <h3><span id="errorMessage"></span></h3><img id="recipe" src="assets/img/errorIcon.png" alt="recipe"/>
-  </div>
-  <script src="/assets/removeBundle.js"></script>
+  <section id="content" class="errorPage">
+    <h1>404: </h1>
+    <h2>Page not found</h2>
+    </section>
+
+  <script src="/assets/loginBundle.js"></script>
 </body>
 </html>
