Added information render

--- a/hosted/style.css
+++ b/hosted/style.css
@@ -102,7 +102,7 @@ nav:nth-child(1) {
     opacity: .9;
     border: 2px solid #2f2626;
     width: 600px;
-    margin-top: 90px;
+    margin-top: -30px;
     padding-top: 10px;
     background-color: #ffcc9b;
     border-bottom-right-radius: 4px;
@@ -164,7 +164,6 @@ nav:nth-child(1) {
     margin: 0 auto;
     display: block;
     margin: 1em;
-    margin-top: 255px;
     font-size: 1.2em;
     width: 200px;
     background-color: #2f2626;
@@ -274,7 +273,8 @@ nav:nth-child(1) {
     z-index: 1;
     margin-top: 75px;
     padding: 0.5em;
-    position: absolute;
+    position: relative;
+    width: 16%;
     margin-left: .5em;
     color: black;
     background-color: sandybrown;
@@ -357,7 +357,7 @@ nav:nth-child(1) {
     border-radius: 4px;
     float:right;
     margin: 20px auto;
-    margin-top: 116px;
+    margin-top: 75px;
     padding: 2.5em;
     opacity: .9;
     
@@ -452,10 +452,11 @@ p.priceCategory {
 
 .recipe:first-child {
     margin-top: 10px;
+    height: 16%;
 }
 
 .recipe:last-child {
-    margin-bottom:10px;
+    height: 16%;
 }
 
 
