--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -47,9 +47,8 @@
     </div>
   </div>
 </nav>
+<section id="recipes"></section>
 <h3 class="makeRecipeh3">Create a Recipe</h3>
-  <section id="recipes">
-  </section>
   <section id="makeRecipe">
   </section>
         
@@ -65,6 +64,7 @@
   <div id="recipeMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box" />
     <h3><span id="errorMessage"></span></h3><img id="recipe" src="assets/img/errorIcon.png" alt="recipe" />
   </div>
+<div id="success"><img id="speech" src="/assets/img/speech.png" alt="speech box"/></div>
   <script src="/assets/bundle.js"></script>
 </body>
 
