--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -54,6 +54,7 @@
   <div id="recipeMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
     <h3><span id="errorMessage">Wrong username or password</span></h3><img id="recipe" src="assets/img/errorIcon.png" alt="error occured picture"/>
   </div>
+<div id="success"><img id="speech" src="/assets/img/speech.png" alt="speech box"/></div>
   <script src="/assets/loginBundle.js"></script>
 </body>
 </html>
