--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -55,7 +55,8 @@
     </section>
 <script src="/assets/settingsBundle.js"></script>
   <div id="recipeMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
-    <h3><span id="errorMessage"></span></h3><img id="recipe" src="assets/img/errorIcon.png" alt="recipe"/>
+    <h3><span id="errorMessage"></span></h3><img id="error" src="assets/img/errorIcon.png" alt="recipe"/>
   </div>
+<div id="success"><img id="speech" src="/assets/img/success.png" alt="success"/></div>
 
 </body>
