--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -62,9 +62,9 @@
     <script src="/assets/searchBundle.js"></script>
 
   <div id="recipeMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box" />
-    <h3><span id="errorMessage"></span></h3><img id="recipe" src="assets/img/errorIcon.png" alt="recipe" />
+    <h3><span id="errorMessage"></span></h3><img id="error" src="assets/img/errorIcon.png" alt="recipe" />
   </div>
-<div id="success"><img id="speech" src="/assets/img/speech.png" alt="speech box"/></div>
+<div id="success"><img id="speech" src="/assets/img/success.png" alt="success"/></div>
   <script src="/assets/bundle.js"></script>
 </body>
 
