--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -52,9 +52,10 @@
 
   <section id="content"></section>
   <div id="recipeMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
-    <h3><span id="errorMessage">Wrong username or password</span></h3><img id="recipe" src="assets/img/errorIcon.png" alt="error occured picture"/>
+    <h3><span id="errorMessage">Wrong username or password</span></h3><img id="error" src="assets/img/errorIcon.png" alt="error occured picture"/>
   </div>
-<div id="success"><img id="speech" src="/assets/img/speech.png" alt="speech box"/></div>
+    
+<div id="success"><img id="speech" src="/assets/img/success.png" alt="success"/></div>
   <script src="/assets/loginBundle.js"></script>
 </body>
 </html>
