--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -55,8 +55,8 @@
       <div class="search">
         <h3 class="searchRecipeh3">Search Recipe</h3>
           <form class="searchForm" name="searchForm" method="GET">
-            <input type="text" class="searchForm input" placeholder="Search By Recipe Name">
-            <button class="formSubmit" type="button" onclick="searchData()">Search Recipe</button>
+            <input type="text" class="searchForm input" id="searchByName" placeholder="Search By Recipe Name">
+            <button class="formSubmit" type="button" onclick="searchRecipe()">Search Recipe</button>
             </form>
       </div>
     <script src="/assets/searchBundle.js"></script>
