Updates to heroku setup

--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -57,6 +57,6 @@
   <div id="recipeMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
     <h3><span id="errorMessage"></span></h3><img id="error" src="assets/img/errorIcon.png" alt="recipe"/>
   </div>
-<div id="success"><img id="speech" src="/assets/img/success.png" alt="success"/></div>
+<div id="success"><img id="success" src="/assets/img/success.png" alt="success"/></div>
 
 </body>
