--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -55,7 +55,7 @@
     <h3><span id="errorMessage">Wrong username or password</span></h3><img id="error" src="assets/img/errorIcon.png" alt="error occured picture"/>
   </div>
     
-<div id="success"><img id="speech" src="/assets/img/success.png" alt="success"/></div>
+<div id="success"><img id="success" src="/assets/img/success.png" alt="success"/></div>
   <script src="/assets/loginBundle.js"></script>
 </body>
 </html>
