--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -85,7 +85,7 @@
 
     <script src="/assets/searchBundle.js"></script>
 
-  <div id="recipeMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box" />
+  <div id="errorMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box" />
     <h3><span id="errorMessage"></span></h3><img id="error" src="assets/img/errorIcon.png" alt="recipe" />
   </div>
 <div id="success"><img id="success" src="/assets/img/success.png" alt="success"/></div>
