--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -52,7 +52,7 @@
 
   <section id="content"></section>
 
-  <div id="recipeMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
+  <div id="errorMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
     <h3><span id="errorMessage">Wrong username or password</span></h3><img id="error" src="assets/img/errorIcon.png" alt="error occured picture"/>
   </div>
     
