--- a/views/remove.handlebars
+++ b/views/remove.handlebars
@@ -49,7 +49,7 @@
 
   <section id="recipes">
   </section>
-  <div id="recipeMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
+  <div id="errorMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
     <h3><span id="errorMessage"></span></h3><img id="error" src="assets/img/errorIcon.png" alt="recipe"/>
   </div>
     
