--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -53,7 +53,7 @@
   <section id="content"></section>
 
   <div id="errorMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
-    <h3><span id="errorMessage">Wrong username or password</span></h3><img id="error" src="assets/img/errorIcon.png" alt="error occured picture"/>
+    <h3><span id="errorMessage" class="alert alert-danger">Wrong username or password</span></h3><img id="error" src="assets/img/errorIcon.png" alt="error occured picture"/>
   </div>
     
 <div id="success"><img id="success" src="/assets/img/success.png" alt="success"/></div>
