--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -54,8 +54,8 @@
 
     </section>
 <script src="/assets/settingsBundle.js"></script>
-  <div id="errorMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
-    <h3><span id="errorMessage"></span></h3><img id="error" src="assets/img/errorIcon.png" alt="recipe"/>
+<div>
+    <h3><span id="errorMessage">Incorrect password try again</span></h3><img id="error" src="assets/img/errorIcon.png" alt="error occured picture"/>
   </div>
 <div id="success"><img id="success" src="/assets/img/success.png" alt="success"/></div>
 
