--- a/hosted/style.css
+++ b/hosted/style.css
@@ -270,12 +270,17 @@ nav:nth-child(1) {
     overflow: hidden;
 }
 
-#success, #error {
+#success{
     display: none;
-    z-index: 225;
-    margin-left: -30px;
-    height: 450px;
-    margin-top: -150px;
+    top: 67px;
+    width: 254px;
+    background-color: white;
+    border: green solid 2px;
+    padding: 1em;
+    position: absolute;
+    z-index: 200;
+    right: 0px;
+    overflow: hidden;
 }
 
 #errorMessage h3 {
