--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -52,7 +52,7 @@
 
   <section id="content"></section>
 <div>
-    <h3><span id="errorMessage">Wrong username or password</span></h3><img id="error" src="assets/img/errorIcon.png" alt="error occured picture"/>
+    <h3><span id="errorMessage">Wrong username or password</span></h3>
   </div>
     
 <div id="success"><img id="success" src="/assets/img/success.png" alt="success"/></div>
