recipe updates on maker

--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -43,9 +43,6 @@
         <li class="nav-item">
           <a class="nav-link" href="/account">Change Password</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/information">Info</a>
-        </li>
       </ul>
     </div>
   </div>
@@ -60,14 +57,14 @@
   <div class="modal-content">
     <div class="modal-header">
       <span class="close">&times;</span>
-      <h2>Modal Header</h2>
+      <h2>Recipe Information</h2>
     </div>
     <div class="modal-body">
-      <p>Some text in the Modal Body</p>
+      <p>${recipeName}</p>
       <p>Some other text...</p>
     </div>
     <div class="modal-footer">
-      <h3>Modal Footer</h3>
+      <h3>${recipeName}</h3>
     </div>
   </div>
 
