info button additions

--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -50,7 +50,7 @@
 <section id="recipes"></section>
 <h3 class="makeRecipeh3">Create a Recipe</h3>
   <section id="makeRecipe">
-      <button id="information">Information</button>
+      <button id="information" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Information</button>
       
 <div id="myModal" class="modal">
   <!-- Modal content -->
