maker updates and search implementation

--- a/hosted/style.css
+++ b/hosted/style.css
@@ -19,8 +19,7 @@ html, body {
 }
 
 /*
-    Nav Bar implementation 
-    Implemented based off Oishii Theme https://colorlib.com/wp/bootstrap-navbar/
+    Nav Bar implementation CSS
 */
 .navbar {
     border: 0;
