--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -50,8 +50,8 @@
 <section id="recipes"></section>
 <h3 class="makeRecipeh3">Create a Recipe</h3>
   <section id="makeRecipe">
-      <button id="information" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Information</button>
-      
+      <input type="submit" id="infoModal" data-toggle="modal" data-target="#myModal"></input>
+
 <div id="myModal" class="modal">
   <!-- Modal content -->
   <div class="modal-content">
@@ -69,52 +69,74 @@
   </div>
 
 </div>
-      
+
   </section>
         
       <div class="search">
         <h3 class="searchRecipeh3">Search Recipe</h3>
           <form class="searchForm" name="searchForm" method="GET">
-            <input type="text" class="searchForm input" id="searchByName" placeholder="Search By Recipe Name">
+            <input type="text" class="searchForm input" id="searchByTaste" placeholder="Search By Recipe Name">
             <button class="formSubmit" type="button" onclick="searchRecipe()">Search Recipe</button>
             </form>
       </div>
 
     <!-- <script src="/assets/searchBundle.js"></script> -->
 <script>
-
 //search for recipe
 const searchRecipe = () => {
 
-    let recipeName = document.getElementById("searchByName").value;
+    let recipeName = document.getElementById("searchByTaste").value;
     
     recipeName = recipeName.toLowerCase();
     recipeName = recipeName.trim();
-
     // grabs recipe class objects
-    let recipeNodeObj = document.querySelectorAll(".recipes");
+    let recipeNodeObj = document.querySelectorAll(".recipeList");
 
     let recipeShow = false;
 
-    recipeNodeObj.forEach(recipes => {
+    recipeNodeObj.forEach(recipeList => {
     //if search input matches a name
-          let title = recipes.querySelector("h3").innerHTML;
+        let title = recipeList.querySelector("p").innerHTML;
         title = title.toLowerCase();
-        
-        if (title == recipeName) {
-           recipeShow = true;
-                console.log(recipeName);
-                title.style.display = "block";
-            } else {
-              recipeNodeObj.style.display = "none";
-            }
-        });
 
-        if (recipeShow == false) {
-            $('#searchEmpty').modal('show');
-          }
-      }
-
+        if (recipeName == "sweet") {
+           if(title.indexOf("sweet") > -1){
+            recipeShow = true;
+            recipeList.style.display = "block";
+           } else {
+            recipeList.style.display = "none"; 
+           }
+        } 
+        else if (recipeName == "spicy"){
+           if(title.indexOf("spicy") > -1){
+            recipeShow = true;
+            recipeList.style.display = "block";
+           } else {
+            recipeList.style.display = "none"; 
+           }            
+        }
+        else if (recipeName == "sour"){
+            recipeList.style.display = "block"; 
+           
+            if(title.indexOf("spicy" ) > -1){
+                    recipeShow = true;
+                    recipeList.style.display = "block";
+           }
+           }
+        else if (recipeName =="bitter"){
+           if(title.indexOf("bitter") > -1){
+            recipeShow = true;
+            recipeList.style.display = "block";
+           } else {
+            recipeList.style.display = "none"; 
+           }
+        }
+        else {
+            recipeList.style.display = "none";  
+        }
+        recipeList.style.display = "none"; 
+    });
+}
   const showRecipe = () => {
       window.location.href="/addRecipe";
   }
