--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -57,6 +57,6 @@
 <div>
     <h3><span id="errorMessage">Incorrect password try again</span></h3><img id="error" src="assets/img/errorIcon.png" alt="error occured picture"/>
   </div>
-<div id="success"><img id="success" src="/assets/img/success.png" alt="success"/></div>
+<div id="success"><span id="success">Successful!</span><img id="success" src="/assets/img/success.png" alt="success"/></div>
 
 </body>
