--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -80,15 +80,11 @@
     <div class="modal-footer">
       <button id="update" class="formSubmit" type="button" onclick="updateFavorite()">Update</button>
     </div>
-      <div id="updateFavorite"></div>
-      <script>
-        function updateFavorite(){
-            
-        }
-      </script>
+      <div id="updateFavorite"></div>>
   </div>
 </div>
 </div> 
+        <br>
       <div class="search">
         <h3 class="searchRecipeh3">Search Recipe</h3>
           <form class="searchForm" name="searchForm" method="GET">
