--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -34,27 +34,20 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" id="loginButton"  href="/login">Login
+          <a class="nav-link" id="loginButton"  href="/login">Return to App
                 <span class="sr-only">(current)</span>
               </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" id="signUpButton" href="/signup">Signup</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="aboutButton" href="/about">About</a>
-        </li>
-
       </ul>
     </div>
   </div>
 </nav>
+    <!-- Routing 404 errors https://knowbody.github.io/react-router-docs/guides/NotFound.html -->
 
   <section id="content" class="errorPage">
-    <h1>404: </h1>
-    <h2>Page not found</h2>
+    <h1 id="notFoundh1">404: </h1>
+    <h2 id="notFoundh2">Page not found</h2>
     </section>
 
-  <script src="/assets/loginBundle.js"></script>
 </body>
 </html>
